[gd_scene load_steps=34 format=2]

[ext_resource path="res://GameParts/Battle/Battle.gd" type="Script" id=1]
[ext_resource path="res://Objects/Player/PlayerPanel.gd" type="Script" id=2]
[ext_resource path="res://Objects/Player/PlayerStats.gd" type="Script" id=3]
[ext_resource path="res://Objects/Skills/SkillButton.gd" type="Script" id=4]
[ext_resource path="res://Objects/Player/Images/tired.png" type="Texture" id=5]
[ext_resource path="res://Objects/Player/Images/angry.png" type="Texture" id=6]
[ext_resource path="res://Objects/Player/Images/die.png" type="Texture" id=7]
[ext_resource path="res://UI/Images/Dungeon.png" type="Texture" id=8]
[ext_resource path="res://Objects/Player/Images/stand.png" type="Texture" id=9]
[ext_resource path="res://Objects/Player/Images/hurt.png" type="Texture" id=10]
[ext_resource path="res://UI/DefaultTheme.tres" type="Theme" id=11]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.721569, 0.690196, 0.690196, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 7 )
region = Rect2( 26, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 7 )
region = Rect2( 52, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 7 )
region = Rect2( 78, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 104, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 7 )
region = Rect2( 130, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 30, 26 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 10 )
region = Rect2( 30, 0, 30, 26 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 10 )
region = Rect2( 60, 0, 30, 26 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 10 )
region = Rect2( 90, 0, 30, 26 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 10 )
region = Rect2( 120, 0, 30, 26 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 10 )
region = Rect2( 150, 0, 30, 26 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 10 )
region = Rect2( 180, 0, 30, 26 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 26, 26 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "die",
"speed": 6.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "angry",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "hurt",
"speed": 15.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "tired",
"speed": 5.0
} ]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="ButtonGroup" id=3]
resource_name = "skills"

[sub_resource type="Animation" id=1]
resource_name = "FadeToNewRoom"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Battle" type="Node"]
script = ExtResource( 1 )

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 8 )

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 46, 35 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="PostBattleContainer" type="CenterContainer" parent="UI"]
visible = false
margin_right = 90.0
margin_bottom = 47.0
mouse_filter = 2

[node name="RestartButton" type="Button" parent="UI/PostBattleContainer"]
margin_left = 10.0
margin_top = 17.0
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 13 )
text = "Try again?"

[node name="TopInfosContainer" type="Control" parent="UI"]
margin_top = -2.0
margin_right = 90.0
margin_bottom = 10.0

[node name="Enemies" type="Label" parent="UI/TopInfosContainer"]
margin_left = 11.0
margin_right = 27.0
margin_bottom = 12.0
rect_scale = Vector2( 0.8, 0.8 )
text = "99"

[node name="Stage" type="Label" parent="UI/TopInfosContainer"]
margin_left = 33.0
margin_right = 64.0
margin_bottom = 12.0
rect_scale = Vector2( 0.8, 0.8 )
text = "Stage x"
align = 1

[node name="Gold" type="Label" parent="UI/TopInfosContainer"]
margin_left = 60.0
margin_right = 84.0
margin_bottom = 12.0
rect_scale = Vector2( 0.8, 0.8 )
text = "9999"
align = 2

[node name="PlayerPanel" type="Panel" parent="UI"]
margin_left = 3.0
margin_top = 62.0
margin_right = 87.0
margin_bottom = 83.0
script = ExtResource( 2 )

[node name="HPBar" type="ProgressBar" parent="UI/PlayerPanel"]
margin_left = 26.0
margin_top = 4.0
margin_right = 81.0
margin_bottom = 10.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
max_value = 10.0
step = 1.0
value = 10.0
percent_visible = false

[node name="HP" type="Label" parent="UI/PlayerPanel"]
margin_left = 39.0
margin_top = 1.0
margin_right = 72.0
margin_bottom = 13.0
size_flags_horizontal = 3
text = "10"
align = 1

[node name="AP" type="Label" parent="UI/PlayerPanel"]
margin_left = 22.0
margin_top = 9.0
margin_right = 50.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "AP: 99"

[node name="Sprite" type="AnimatedSprite" parent="UI/PlayerPanel"]
position = Vector2( 13, 9.5 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 7 )
animation = "stand"
playing = true

[node name="TextboxPanel" type="Panel" parent="UI"]
margin_top = 135.0
margin_right = 90.0
margin_bottom = 160.0

[node name="Textbox" type="RichTextLabel" parent="UI/TextboxPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 91.0
margin_bottom = 24.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_constants/line_separation = 2
custom_styles/normal = SubResource( 2 )
text = "Testing a TextBox
Line 1
Line2
Line 3 Yay
"
scroll_active = false

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 2.0
margin_top = 86.0
margin_right = 88.0
margin_bottom = 133.0
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 2

[node name="0" type="Button" parent="UI/BattleActionButtons"]
margin_right = 42.0
margin_bottom = 10.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
pressed = true
group = SubResource( 3 )
text = "SLASH"
script = ExtResource( 4 )

[node name="1" type="Button" parent="UI/BattleActionButtons"]
margin_left = 44.0
margin_right = 86.0
margin_bottom = 10.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "CROSS"
script = ExtResource( 4 )

[node name="2" type="Button" parent="UI/BattleActionButtons"]
margin_top = 12.0
margin_right = 42.0
margin_bottom = 22.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "TRIPLE"
script = ExtResource( 4 )

[node name="3" type="Button" parent="UI/BattleActionButtons"]
margin_left = 44.0
margin_top = 12.0
margin_right = 86.0
margin_bottom = 22.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "COMBO"
script = ExtResource( 4 )

[node name="4" type="Button" parent="UI/BattleActionButtons"]
margin_top = 24.0
margin_right = 42.0
margin_bottom = 34.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
disabled = true
toggle_mode = true
group = SubResource( 3 )
text = "SLASH"
script = ExtResource( 4 )

[node name="5" type="Button" parent="UI/BattleActionButtons"]
margin_left = 44.0
margin_top = 24.0
margin_right = 86.0
margin_bottom = 34.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
disabled = true
toggle_mode = true
group = SubResource( 3 )
text = "SLASH"
script = ExtResource( 4 )

[node name="6" type="Button" parent="UI/BattleActionButtons"]
margin_top = 36.0
margin_right = 42.0
margin_bottom = 46.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
disabled = true
toggle_mode = true
group = SubResource( 3 )
text = "SLASH"
script = ExtResource( 4 )

[node name="7" type="Button" parent="UI/BattleActionButtons"]
margin_left = 44.0
margin_top = 36.0
margin_right = 86.0
margin_bottom = 46.0
rect_min_size = Vector2( 42, 10 )
rect_pivot_offset = Vector2( -99, 55 )
disabled = true
toggle_mode = true
group = SubResource( 3 )
text = "SLASH"
script = ExtResource( 4 )

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeToNewRoom = SubResource( 1 )

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="ap_changed" from="PlayerStats" to="UI/PlayerPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/PlayerPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="init_player" from="PlayerStats" to="UI/PlayerPanel" method="_on_PlayerStats_init_player"]
[connection signal="pressed" from="UI/PostBattleContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="toggled" from="UI/BattleActionButtons/0" to="UI/BattleActionButtons/0" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/1" to="UI/BattleActionButtons/1" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/2" to="UI/BattleActionButtons/2" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/3" to="UI/BattleActionButtons/3" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/4" to="UI/BattleActionButtons/4" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/5" to="UI/BattleActionButtons/5" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/6" to="UI/BattleActionButtons/6" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/7" to="UI/BattleActionButtons/7" method="_on_toggled"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
